# my-game

./: .gitignore
cppGame01/include/: level.h  player.h
cppGame01/include/entities/: block.h
cppGame01/src/: level.cpp  main.cpp  player.cpp
cppGame02/: CMakeLists.txt
cppGame02/include/: block.h  enemy.h  gameCamera.h  levelMaker.h  levels.h  player.h
cppGame02/src/: enemy.cpp  gameCamera.cpp  levelMaker.cpp  levels.cpp  main.cpp  player.cpp
